# Discontinuous-Galerkin

./: .gitignore  AGENTS.md  README.md  main_Biharmonic1D.m  main_Biharmonic2D.m  main_Biharmonic_C0G2D.m  main_Biharmonic_DG1D.m  main_Biharmonic_DG2D.m  main_Bratu.m  main_Bratu_FDIter.m  main_Poisson1D.m  main_Poisson2D.m  main_PoissonMixed_1D.m  main_PoissonMixed_2D.m  main_Poisson_DG2D.m  main_Poisson_Pk2D.m  startup.m
Biharmonic-IPC0G-1D/: assembleBdryNitsche_Bihar1D.m  assembleIP_Bihar1D.m  assembleK_Bihar1D.m
Biharmonic-IPC0G-2D/: assembleIP_Bihar2D.m  modifyLoadVectorNitsche_Bihar2D.m
Biharmonic-IPDG-1D/: assembleBdryNitsche.m  assembleInnerPenalty.m  assembleK_Bihar1D.m  assembleLoadVector.m  assembleLoad_Bihar1D.m  assembleStiffness.m  getH1Err.m  plotSol.m
Biharmonic-IPDG-2D/: assembleIP_Bihar2D.m  assembleInnerPenalty.m  assembleK_Bihar2D.m  assembleStiffness.m  modifyLoadVectorNitsche.m
Bratu-1D/: solveBratuAlpha.m  solveBratuSecondSolution_Deflated.m  solveBratu_FDIter.m  solveBratu_FEM_Newton.m
DG-MATLAB/: main_Biharmonic_C0G1D.m  main_Biharmonic_Hermite1D.m  main_Poisson_DG1D.m  main_Poisson_Pk1D.m  main_Poisson_Pk2D.m
DG-cpp/: .gitignore  CMakeLists.txt  README.md  dmr_amr_config.json  ns_config.json  spoon_config.json  w64devkit-toolchain.cmake
DG-cpp/docs/: Argyris_vs_C0IPCG.md  cahn-hilliard.md  elastic-tail-literature.md  euler-fsi.md  euler.md  navier-stokes.md  spoon-ib-oscillation-fix.md
DG-cpp/examples/: blast_rod_config.json  ch_config.json  corner_config.json  dmr_amr_config.json  dmr_config.json  ns_config.json  ns_filament_config.json  ns_tadpole_config.json  ns_tadpole_elastic_config.json  riemann_config.json  rmi_config.json  shock_bubble_config.json
DG-cpp/src/argyris/: Argyris.cpp
DG-cpp/src/cahn_hilliard/: CahnHilliard.h  ExactSolutionCH.h  Json.h  ch_main.cpp
DG-cpp/src/cg/: pk_main.cpp
DG-cpp/src/common/: ExactSolution.h  FEM.h  Mesh.cpp  MeshGen.cpp  MeshGen.h  Quadrature.cpp  README.md  utils.h
DG-cpp/src/euler/: AMR.cpp  AdaptiveMesh.cpp  DG.cpp  DG.h  EulerDG.cpp  EulerDG.h  Scene.h  euler_amr_scene.h  euler_convergence_main.cpp  euler_corner_diffraction_main.cpp  euler_dmr_amr_main.cpp  euler_dmr_main.cpp  euler_riemann_main.cpp  euler_rmi_amr_main.cpp  euler_shock_bubble_main.cpp
DG-cpp/src/euler/ALE/: README.md
DG-cpp/src/euler/ALE/cases/: Convergence.h  FSI.cpp  FSI.h  Panel.h  Piston.cpp
DG-cpp/src/euler/ALE/cases/BlastRod/: CGCase.cpp  Case.cpp  Case.h  Coupling.cpp  Coupling.h  Domain.cpp  Domain.h  Geometry.cpp  Geometry.h
DG-cpp/src/euler/ALE/core/: BodyFittedMesh.cpp  BodyFittedMesh.h  Checkpoint.cpp  Checkpoint.h  Core.cpp  Core.h  DGState.h  ElasticSolid.cpp  ElasticSolid.h  Output.cpp  Output.h  PistonModel.h
DG-cpp/src/euler/ALE_cases/: CGCase.cpp  Convergence.cpp  Panel.cpp  Piston.h  PistonFSI.cpp  ShockDisk.cpp  TurekFlag.cpp  TurekFlag.h
DG-cpp/src/euler/ALE_cases/BlastRod/: CGCase.h  Case.cpp  Case.h  Coupling.cpp  Domain.h
DG-cpp/src/euler/ALE_core/: BodyFittedMesh.h  Checkpoint.cpp  Checkpoint.h  Core.cpp  Core.h  DGState.cpp  ElasticSolid.cpp  ElasticSolid.h  Movie.cpp  Movie.h  NeoHookeanSolid.cpp  NeoHookeanSolid.h  PistonModel.cpp  SolidALEMap.cpp  SolidALEMap.h
DG-cpp/src/euler/cases/: convergence.cpp  corner.cpp  dmr.cpp  dmr_amr.cpp  riemann.cpp  rmi_amr.cpp  shock_bubble.cpp
DG-cpp/src/euler/core/: DG.cpp  DGImpl.h  DGLTS.cpp  DGRender.cpp  DGUtils.cpp  GeoUtils.h  Render.cpp  Render.h  Scene.h
DG-cpp/src/fsi/: EulerALE1D.cpp  EulerALE1D.h  EulerALE2D.cpp  EulerALE2D.h  FSIDiagnostics.cpp  FSIDiagnostics.h  euler_fsi_convergence2d_main.cpp  euler_fsi_convergence_main.cpp  euler_fsi_flux_test_main.cpp  euler_fsi_piston2d_main.cpp  euler_fsi_piston2d_showcase_main.cpp  euler_fsi_piston_main.cpp  euler_fsi_vortex_showcase_main.cpp
DG-cpp/src/ipdg/: DGAssembly.h  biharmonic_ipcg_main.cpp
DG-cpp/src/mixed/: HybridHDG.cpp  HybridHDG.h  PostProcess.cpp  VecFEM.h  hybrid_main.cpp
DG-cpp/src/navier_stokes/: CosseratFilament.cpp  CosseratFilament.h  ElasticTadpole.cpp  ElasticTadpole.h  IBCoupler.cpp  IBCoupler.h  MeshGen.cpp  MeshGen.h  NavierStokes.cpp  NavierStokes.h  Spoon.cpp  Spoon.h  Tadpole.cpp  Tadpole.h  cosserat_test_main.cpp  ns_convergence_main.cpp  ns_cyl_order.cpp  ns_filament_main.cpp  ns_main.cpp  ns_spoon_main.cpp  ns_tadpole_elastic_main.cpp  ns_tadpole_main.cpp  ns_temporal_diag.cpp
Poisson-IPDG-1D/: DPk.m  assembleBdryNitsche.m  assembleIP_Poi1D.m  assembleInnerPenalty.m  assembleK_Poi1D.m  assembleLoadVector.m  assembleStiffness.m  assembleWeakBdry_Poi1D.m  getH1Err.m  plotSol.m
Poisson-IPDG-2D/: DPk.m  assembleIP_Poi2D.m  assembleInnerPenalty.m  assembleK_Poi2D.m  assembleLoadVector.m  assembleStiffness.m  square.m
Poisson-IPDG-2D-cpp/: CMakeLists.txt
Poisson-IPDG-2D-cpp/src/: Assembly.cpp  Assembly.h  ExactSolution.h  FEM.h  Mesh.cpp  Mesh.h  main.cpp  utils.h
Poisson-cpp/: .gitignore  CMakeLists.txt  README.md  ch_config.json  dmr_amr_config.json  dmr_config.json
Poisson-cpp/docs/: cahn-hilliard.md  euler.md  navier-stokes.md
Poisson-cpp/src/argyris/: Argyris.h  argyris_main.cpp
Poisson-cpp/src/cahn_hilliard/: CahnHilliard.cpp  ch_convergence_main.cpp  ch_main.cpp
Poisson-cpp/src/cg/: pk_main.cpp
Poisson-cpp/src/common/: ExactSolution.h  FEM.cpp  FEM.h  Mesh.cpp  Mesh.h  Quadrature.h
Poisson-cpp/src/euler/: AdaptiveMesh.h  EulerDG.cpp  EulerDG.h  euler_dmr_amr_main.cpp  euler_dmr_main.cpp
Poisson-cpp/src/ipdg/: DGAssembly.cpp  DGAssembly.h  biharmonic_ipcg_main.cpp  ipdg_main.cpp
Poisson-cpp/src/mixed/: AssemblyHDG.cpp  AssemblyHDG.h  PostProcess.h  VecFEM.cpp  mixed_main.cpp
Poisson-cpp/src/navier_stokes/: MeshGen.h  NavierStokes.cpp  NavierStokes.h  ns_convergence_main.cpp  ns_main.cpp
PoissonMixed-HDG-1D/: assembleInnerPenalty.m  assembleLoadVector.m  assembleMass.m  assembleMixed.m  assembleMixedPenalty.m  assembleWeakBDC.m  assembleWeakBDC_HDG1D.m  getL2Err.m  plotSol.m  solveLocalPoisson.m
PoissonMixed-HDG-2D/: assembleDivMass.m  assembleGradMass.m  assembleInnerPenalty.m  assembleWeakBDC.m  solveLocalPoisson2D.m
(+75 files in other folders)
